Add Aabout info and Logo

--- a/booking.html
+++ b/booking.html
@@ -162,6 +162,7 @@
                                         <option value="">Select Country</option>
                                         <option value="us">United States</option>
                                         <option value="ca">Canada</option>
+                                        <option value="ca">Pakistan</option>
                                         <option value="uk">United Kingdom</option>
                                         <option value="au">Australia</option>
                                         <option value="other">Other</option>
