--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <div class="story-text">
                     <h2>Our Story</h2>
                     <p>Founded in 2010, Sialvi Travelers began as a small family business with a simple dream: to help people explore the world and create unforgettable memories. What started as a local travel agency has grown into a trusted global partner for thousands of travelers.</p>
-                    <p>Our founder, Ahmed Sialvi, started this journey after his own transformative travel experiences showed him the power of exploration to broaden perspectives, create connections, and enrich lives. Today, we continue that mission with the same passion and personal touch that defined our early days.</p>
+                    <p>Our founder, Ahmad Sialvi, started this journey after his own transformative travel experiences showed him the power of exploration to broaden perspectives, create connections, and enrich lives. Today, we continue that mission with the same passion and personal touch that defined our early days.</p>
                 </div>
                 <div class="story-image">
                     <img src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?w=500" alt="Our Story">
@@ -90,40 +90,40 @@
             <h2>Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=300" alt="Ahmed Sialvi">
-                    <h3>Ahmed Sialvi</h3>
+                    <img src="IMG-20231005-WA0035.jpg" alt="M. Ahmad Sialvi">
+                    <h3>M. Ahmad Sialvi</h3>
                     <p class="position">Founder & CEO</p>
-                    <p>With over 15 years in the travel industry, Ahmed leads our team with passion and expertise in creating extraordinary travel experiences.</p>
+                    <p>With over 15 years in the travel industry, Ahmad leads our team with passion and expertise in creating extraordinary travel experiences.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=300" alt="Sarah Johnson">
-                    <h3>Sarah Johnson</h3>
+                    <img src="IMG-20250908-WA0008.jpg" alt="Ghulam Mustafa">
+                    <h3>Ghulam Mustafa</h3>
                     <p class="position">Head of Operations</p>
-                    <p>Sarah ensures every detail of your journey is perfectly planned and executed, bringing 10 years of operational excellence to our team.</p>
+                    <p>Ghulam Mustafa ensures every detail of your journey is perfectly planned and executed, bringing 10 years of operational excellence to our team.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://web.facebook.com/GMKILLER27"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=300" alt="Michael Chen">
-                    <h3>Michael Chen</h3>
+                    <img src="IMG-20250908-WA0008.jpg" alt="Ghulam Mustafa">
+                    <h3>Ghulam Mustafa</h3>
                     <p class="position">Travel Consultant</p>
-                    <p>Michael specializes in Asian destinations and adventure travel, helping clients discover hidden gems and authentic experiences.</p>
+                    <p>Ghulam Mustafa specializes in Asian destinations and adventure travel, helping clients discover hidden gems and authentic experiences.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://web.facebook.com/GMKILLER27"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=300" alt="Emma Rodriguez">
-                    <h3>Emma Rodriguez</h3>
+                    <img src="IMG-20250908-WA0007.jpg" alt="M. Imran Ashraf">
+                    <h3>M. Imran Ashraf</h3>
                     <p class="position">Customer Relations Manager</p>
-                    <p>Emma ensures every client receives personalized attention and support throughout their journey, making travel dreams come true.</p>
+                    <p>Imran ensures every client receives personalized attention and support throughout their journey, making travel dreams come true.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
