Solved the about images margin left to center.

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             <h2>Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="IMG-20231005-WA0035.jpg" alt="M. Ahmad Sialvi">
+                    <img style="margin-left: 30px;" src="IMG-20231005-WA0035.jpg" alt="M. Ahmad Sialvi">
                     <h3>M. Ahmad Sialvi</h3>
                     <p class="position">Founder & CEO</p>
                     <p>With over 15 years in the travel industry, Ahmad leads our team with passion and expertise in creating extraordinary travel experiences.</p>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="IMG-20250908-WA0008.jpg" alt="Ghulam Mustafa">
+                    <img style="margin-left: 30px;" src="IMG-20250908-WA0008.jpg" alt="Ghulam Mustafa">
                     <h3>Ghulam Mustafa</h3>
                     <p class="position">Head of Operations</p>
                     <p>Ghulam Mustafa ensures every detail of your journey is perfectly planned and executed, bringing 10 years of operational excellence to our team.</p>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="IMG-20250908-WA0008.jpg" alt="Ghulam Mustafa">
+                    <img style="margin-left: 30px;" src="IMG-20250908-WA0008.jpg" alt="Ghulam Mustafa">
                     <h3>Ghulam Mustafa</h3>
                     <p class="position">Travel Consultant</p>
                     <p>Ghulam Mustafa specializes in Asian destinations and adventure travel, helping clients discover hidden gems and authentic experiences.</p>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="IMG-20250908-WA0007.jpg" alt="M. Imran Ashraf">
+                    <img style="margin-left: 30px;" src="IMG-20250908-WA0007.jpg" alt="M. Imran Ashraf">
                     <h3>M. Imran Ashraf</h3>
                     <p class="position">Customer Relations Manager</p>
                     <p>Imran ensures every client receives personalized attention and support throughout their journey, making travel dreams come true.</p>
